distributed-tracing/emojivoto/emojivoto.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: emojivoto
  annotations:
    config.linkerd.io/trace-collector: "oc-collector.tracing:55678"
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  name: emoji
  namespace: emojivoto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: emoji-svc
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: emoji-svc
    spec:
      serviceAccountName: emoji
      containers:
      - env:
        - name: GRPC_PORT
          value: "8080"
        - name: OC_AGENT_HOST
          value: "oc-collector.tracing:55678"
        image: buoyantio/emojivoto-emoji-svc:v8-tracing
        name: emoji-svc
        ports:
        - containerPort: 8080
          name: grpc
        resources:
          requests:
            cpu: 100m
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: emoji-svc
  namespace: emojivoto
spec:
  selector:
    app: emoji-svc
  clusterIP: None
  ports:
  - name: grpc
    port: 8080
    targetPort: 8080
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  name: voting
  namespace: emojivoto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: voting-svc
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: voting-svc
    spec:
      serviceAccountName: voting
      containers:
      - env:
        - name: GRPC_PORT
          value: "8080"
        - name: OC_AGENT_HOST
          value: "oc-collector.tracing:55678"
        image: buoyantio/emojivoto-voting-svc:v8-tracing
        name: voting-svc
        ports:
        - containerPort: 8080
          name: grpc
        resources:
          requests:
            cpu: 100m
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: voting-svc
  namespace: emojivoto
spec:
  selector:
    app: voting-svc
  clusterIP: None
  ports:
  - name: grpc
    port: 8080
    targetPort: 8080
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  name: web
  namespace: emojivoto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-svc
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: web-svc
    spec:
      serviceAccountName: web
      containers:
      - env:
        - name: WEB_PORT
          value: "80"
        - name: OC_AGENT_HOST
          value: "oc-collector.tracing:55678"
        - name: EMOJISVC_HOST
          value: emoji-svc.emojivoto:8080
        - name: VOTINGSVC_HOST
          value: voting-svc.emojivoto:8080
        - name: INDEX_BUNDLE
          value: dist/index_bundle.js
        image: buoyantio/emojivoto-web:v8-tracing
        name: web-svc
        ports:
        - containerPort: 80
          name: http
        resources:
          requests:
            cpu: 100m
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  namespace: emojivoto
spec:
  type: LoadBalancer
  selector:
    app: web-svc
  ports:
  - name: http
    port: 80
    targetPort: 80
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  name: vote-bot
  namespace: emojivoto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote-bot
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: vote-bot
    spec:
      containers:
      - command:
        - emojivoto-vote-bot
        image: buoyantio/emojivoto-web:v8
        name: vote-bot
        resources:
          requests:
            cpu: 10m
status: {}
---
