distributed-tracing/emojivoto/tracing.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: tracing
  annotations:
    linkerd.io/inject: enabled
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: jaeger
  namespace: tracing
  labels:
    app: jaeger
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: jaeger
    spec:
      dnsPolicy: ClusterFirst
      containers:
      - name: jaeger
        image: jaegertracing/all-in-one:1.8
        ports:
        - name: collection
          containerPort: 14268
        - name: ui
          containerPort: 16686
  selector:
    matchLabels:
      app: jaeger
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger
  namespace: tracing
  labels:
    app: jaeger
spec:
  selector:
    app: jaeger
  ports:
  - name: collection
    port: 14268
  - name: ui
    port: 16686
---
apiVersion: v1
kind: Service
metadata:
  name: oc-collector
  namespace: tracing
  labels:
    app: opencensus
    component: oc-collector
spec:
  ports:
  - name: opencensus
    port: 55678
    protocol: TCP
    targetPort: 55678
  - name: zipkin
    port: 9411
    protocol: TCP
    targetPort: 9411
  selector:
    component: oc-collector
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oc-collector
  namespace: tracing
  labels:
    app: opencensus
    component: oc-collector
spec:
  minReadySeconds: 5
  progressDeadlineSeconds: 120
  replicas: 1
  template:
    metadata:
      annotations:
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8888"
        prometheus.io/scrape: "true"
      labels:
        app: opencensus
        component: oc-collector
    spec:
      containers:
      - command:
          - "/occollector_linux"
          - "--config=/conf/oc-collector-config.yaml"
        image: omnition/opencensus-collector:0.1.10
        name: oc-collector
        resources:
          limits:
            cpu: 1
            memory: 2Gi
          requests:
            cpu: 200m
            memory: 400Mi
        ports:
        - containerPort: 55678
        - containerPort: 9411
        volumeMounts:
        - name: oc-collector-config-vol
          mountPath: /conf
        livenessProbe:
          httpGet:
            path: /
            port: 13133
        readinessProbe:
          httpGet:
            path: /
            port: 13133
      volumes:
        - configMap:
            name: oc-collector-conf
            items:
              - key: oc-collector-config
                path: oc-collector-config.yaml
          name: oc-collector-config-vol
  selector:
    matchLabels:
      app: opencensus
      component: oc-collector
